src/ContosoTraders.Ui.Website/src/styles/pages/_home.scss
// -----------------------------------------------------------------------------
// This file contains styles that are specific to the Home page.
// -----------------------------------------------------------------------------
$dark:#000;
$light:#fff;
$darkgrey:#222222;
.home {
    margin-top: 190px;
    .upload {
        margin-bottom: 1.5rem;
    }
}
.light {
    .mainHeader{
        background-color: $light;
        color: $dark !important;
    }
}
.dark {
    background-color: $darkgrey !important;
    color: $light !important;
    a{
        color: $light !important; 
    }
    .mainHeader{
        background-color: $dark !important;
        color: $light !important;
        header{
            background-color: $dark !important;
        }
    }
    .home{
        .LaptopSection{
            background-color: $dark !important;
            color: $light !important;
            .LapHeadmain{
                color: $light !important;
            }
            .LapHead{
                color: $light !important;
            }
            .LaptopButton{
                color: $light !important;
                border: 1px solid $light !important;
            }
        }
        .final-section-container {
            background-color: #e6e6e6;
        }
    }
    .footer-container{
        background-color: $dark !important;
        color: $light !important;
        p, li, .logo-div, .list-element{
            color: $light !important;
        }
    }
}

